fixed popup overflow

--- a/source/sass/blocks/popup-overlay.scss
+++ b/source/sass/blocks/popup-overlay.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
 
-  background: transparent;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .popup-overlay__show {
